[package]
name = "reverb-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A Rust client library for Laravel Reverb WebSocket server"
repository = "https://github.com/Team-Nifty-GmbH/reverb_rs"
keywords = ["websocket", "laravel", "reverb", "pusher", "realtime"]
categories = ["network-programming", "web-programming"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
url = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "cookies"] }
thiserror = "2.0"
tracing = "0.1"
async-trait = "0.1"
urlencoding = "2"
